--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ C++/test/.vs/
 C++/test/test.VC.db
 *.opendb
 C++/test/test_01/test_01.vcxproj.user
+C++/dependent/tinyxml2.h
+C++/dependent/tinyxml2.cpp
