[C++] add dep in pro file

--- a/C++/test/ordered_tec/ordered_tec.vcxproj.filters
+++ b/C++/test/ordered_tec/ordered_tec.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClInclude Include="..\..\source\ordered_tec.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\dependent\tinyxml2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\ordered_tec.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\dependent\tinyxml2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
