--- a/C++/test/ordered_tec/ordered_tec.vcxproj
+++ b/C++/test/ordered_tec/ordered_tec.vcxproj
@@ -142,9 +142,11 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\dependent\tinyxml2.h" />
     <ClInclude Include="..\..\source\ordered_tec.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\dependent\tinyxml2.cpp" />
     <ClCompile Include="..\..\source\ordered_tec.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
