[C++] small modification about test

--- a/C++/test/test_01/test_01.vcxproj
+++ b/C++/test/test_01/test_01.vcxproj
@@ -156,6 +156,9 @@
   <ItemGroup>
     <ClCompile Include="order_tec_test_1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="test_01.m" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
