--- a/C++/test/test_01/test_01.vcxproj.filters
+++ b/C++/test/test_01/test_01.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="test_01.m" />
+  </ItemGroup>
 </Project>
