[C++] test about getsize and related errors

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ C++/dependent/tinyxml2.cpp
 C++/test/test_03/log.txt
 C++/test/test_05/test_05.txt
 C++/test/test_06/test_06.txt
+C++/test/test_07/test_07.txt
