--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ C++/test/test_03/log.txt
 C++/test/test_05/test_05.txt
 C++/test/test_06/test_06.txt
 C++/test/test_07/test_07.txt
+C++/test/test_08/test_08.txt
