--- a/.gitignore
+++ b/.gitignore
@@ -9,16 +9,22 @@
 *.plt
 *.lib
 *.log
-C++/test/.vs/
-C++/test/test.VC.db
-*.opendb
-C++/test/test_01/test_01.vcxproj.user
-C++/dependent/tinyxml2.h
-C++/dependent/tinyxml2.cpp
 *.json
 *.xml
+*.opendb
+C++/test/.vs/
+C++/test/test.VC.db
+C++/test/test_01/test_01.vcxproj.user
 C++/test/test_03/log.txt
 C++/test/test_05/test_05.txt
 C++/test/test_06/test_06.txt
 C++/test/test_07/test_07.txt
 C++/test/test_08/test_08.txt
+C++/test/test_01/test_01.txt
+C++/test/test_02/Zone_A.txt
+C++/test/test_02/test_02.txt
+C++/test/test_03/test_03_g.txt
+C++/test/test_03/test_03_s.txt
+C++/test/test_04/test_04/file_g.txt
+C++/test/test_10/Zone_A.txt
+C++/test/test_10/test_10.txt
