[Matlab] OOP change

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ C++/test/test_03/test_03_s.txt
 C++/test/test_04/test_04/file_g.txt
 C++/test/test_10/Zone_A.txt
 C++/test/test_10/test_10.txt
+*.asv
