--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ C++/test/test_04/test_04/file_g.txt
 C++/test/test_10/Zone_A.txt
 C++/test/test_10/test_10.txt
 *.asv
+MATLAB/test/ordered_tec_test_03/untitled_file.txt
