--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ C++/test/test_10/Zone_A.txt
 C++/test/test_10/test_10.txt
 *.asv
 MATLAB/test/ordered_tec_test_03/untitled_file.txt
+MATLAB/test/ordered_tec_test_04/test_04_g.txt
+MATLAB/test/ordered_tec_test_04/test_04_s.txt
+MATLAB/test/ordered_tec_test_05/test_05.txt
+MATLAB/test/ordered_tec_test_05/test_05/test_05_grid.txt
