--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ MATLAB/test/ordered_tec_test_04/test_04_s.txt
 MATLAB/test/ordered_tec_test_05/test_05.txt
 MATLAB/test/ordered_tec_test_05/test_05/test_05_grid.txt
 MATLAB/test/ordered_tec_test_09/test_09.txt
+C++/doc/chs/
+C++/doc/eng/
