[Matlab] add log about min and max

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ MATLAB/test/ordered_tec_test_04/test_04_g.xml
 MATLAB/test/ordered_tec_test_04/test_04_s.xml
 C++/test/test_02/Zone_A.xml
 C++/test/test_02/test_02.xml
+MATLAB/test/ordered_tec_test_03/untitled_file.xml
